--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>Welcome To GFG</h2>
     <p>
         Default code has been
-        loaded into the Editor.
+        loaded into the Editor. edit
     </p>
 </body>
 
