--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>SmartLib</title>
 </head>
 
 <body>
-    <h2>Welcome To GFG</h2>
-    <p>
-        Default code has been
-        loaded into the Editor.
-    </p>
+    <h2>Search</h2>
+    <input id="uquery" type="text" name="uquery" size="45">
 </body>
 
 </html>
