--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 
 <head>
     <title>SmartLib</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
+    <div class = "header"></div>
     <h2>Search</h2>
     <input id="uquery" type="text" name="uquery" size="45">
 </body>
