--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 
 <body>
-    <div class = "header"></div>
+    <div class = "header">
+        <nav>
+            <a href="contact.html">Support</a>
+            <a href="profile.html">Profile</a>
+        </nav>
+    </div>
+    
     <h2>Search</h2>
     <input id="uquery" type="text" name="uquery" size="45">
 </body>
