--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class = "header">
         <nav>
             <a href="contact.html">Support</a>
-            <a href="profile.html">Profile</a>
+            <a href="login.html">Login</a>
+            <a href="signup.html">Signup</a>
         </nav>
     </div>
     
