--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
 <html>
 
 <head>
-    <title>Profile</title>
+    <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <div class="login_form">
+    <div class="form_container">
         <!-- Login form container -->
         <form action="#">
           <h3>Log in</h3>
@@ -28,7 +28,7 @@
           </div>
            <!-- Login button -->
           <button type="submit">Log In</button>
-          <p class="sign_up">Don't have an account? <a href="#">Sign up</a></p>
+          <p class="sign_up">Don't have an account? <a href="signup.html">Sign up</a></p>
         </form>
     </div>
 </body>
